[project]
name = "wiki-visualizations-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tqdm>=4.67.1",
]

[project.scripts]
download = "download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Install flat modules from src/ so `uv run download` can import them.
[tool.hatch.build.targets.wheel.force-include]
"src/download.py" = "download.py"
"src/cli.py" = "cli.py"
