[project]
name = "wiki-visualizations-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
download-archive = "download_archive:main"
download-model = "download_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hyphenated source files are installed as importable underscore modules.
[tool.hatch.build.targets.wheel.force-include]
"src/download_archive.py" = "download_archive.py"
"src/download_model.py" = "download_model.py"
"src/util.py" = "util.py"
